k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishaw-java
  labels:
    app: wishaw-java
spec:
  selector:
    app: wishaw-java
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
