k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wishaw-java
  labels:
    app: wishaw-java
spec:
  rules:
    - host: wishaw-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wishaw-java
                port:
                  number: 80
